--- a/styles/global.css
+++ b/styles/global.css
@@ -34,6 +34,10 @@ body{
     margin-inline: auto;
 }
 
+img{
+    max-width: 100%;
+}
+
 a{
     text-decoration: none;
     color: inherit;
@@ -45,10 +49,6 @@ h1, h2, h3{
     font: inherit;
 }
 
-/* Utility-First */
-.grid{
-    display: grid;
-}
-.grid-flow-col{
-    grid-auto-flow: column;
+main{
+    margin-top: 40px;
 }
