--- a/styles/sections.css
+++ b/styles/sections.css
@@ -3,7 +3,7 @@ section header{
     padding-block: 12px 24px;
     font: var(--text-span);
         
-    header a {
+    a {
         justify-self: end;
         align-items: center;
         gap: 8px;
@@ -12,7 +12,6 @@ section header{
             background-image: url(../assets/icons/ArrowRight.svg);
             width: 16px;
             height: 16px;
-            object-fit: cover;
         }
 
         &:hover span{
@@ -22,6 +21,7 @@ section header{
 }
 
 #featured{
+    grid-area: featured;
     img{
         height: 100%;
         object-fit: cover;
@@ -58,7 +58,7 @@ section header{
 }
 
 #weekly{
-
+    grid-area: weekly;
     &>div {
         grid-template-columns: repeat(4, 292px);
     }
@@ -79,5 +79,32 @@ section header{
             margin-top: 8px;
             font-weight: 800;
         }
+    }
+}
+
+#ai{
+    grid-area: ai;
+    img{
+        width: 176px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3{
+        margin-block: 8px 4px;
+    }
+}
+aside{
+    grid-area: aside;
+}
+#more{
+    margin-top: 32px;
+    h3{
+        margin-top: 8px;
+    }
+    img{
+        width: 72px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
     }
 }
